# slides

./: .gitignore  AGENTS.md  pyproject.toml  slides.deploy.json
.github/workflows/: deploy-slides.yml
slides/progress_reports/2026-06-15/: cells_are_agents.html
src/html_slides/: __init__.py  deploy.py  serve.py
