[project]
name = "html-slides"
version = "0.1.0"
description = "Local static server for HTML research slides."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
build-pages = "html_slides.deploy:main"
serve = "html_slides.serve:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
